Add tests and move parameter