@@ -16,7 +16,6 @@ import org.elasticsearch.action.admin.indices.stats.IndicesStatsRequest;
 import org.elasticsearch.action.support.IndicesOptions;
 import org.elasticsearch.client.internal.node.NodeClient;
 import org.elasticsearch.common.Strings;
-import org.elasticsearch.index.shard.DenseVectorStats;
 import org.elasticsearch.rest.BaseRestHandler;
 import org.elasticsearch.rest.RestRequest;
 import org.elasticsearch.rest.Scope;
@@ -135,8 +134,6 @@ public class RestIndicesStatsAction extends BaseRestHandler {
             indicesStatsRequest.includeUnloadedSegments(request.paramAsBoolean("include_unloaded_segments", false));
         }
 
-        request.paramAsBoolean(DenseVectorStats.INCLUDE_AUTO_CALIBRATION, false);
-
         return channel -> new RestCancellableNodeClient(client, request.getHttpChannel()).admin()
             .indices()
             .stats(indicesStatsRequest, new RestRefCountedChunkedToXContentListener<>(channel));
@@ -147,7 +144,7 @@ public class RestIndicesStatsAction extends BaseRestHandler {
         return false;
     }
 
-    private static final Set<String> RESPONSE_PARAMS = Collections.singleton("level");
+    private static final Set<String> RESPONSE_PARAMS = Set.of("level", "include_auto_calibration");
 
     @Override
     protected Set<String> responseParams() {
